lesson 22 add errorBoundary and BugButton

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
   "language": "English",
   "loading": "Loading...",
-  "page not found": "Page not found"
+  "page not found": "Page not found",
+  "Something went wrong": "Something went wrong",
+  "reload page": "Reload page",
+  "throw error": "Throw error"
 }
