fix toggle button translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "page not found": "Page not found",
   "Something went wrong": "Something went wrong",
   "reload page": "Reload page",
-  "throw error": "Throw error"
+  "throw error": "Throw error",
+  "toggle": "Toggle theme"
 }
