--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "page not found": "Страница не найдена",
   "Something went wrong": "Произошла непредвиденная ошибка",
   "reload page": "Перезагрузить страницу",
-  "throw error": "Бросить ошибку"
+  "throw error": "Бросить ошибку",
+  "toggle": "Перключить тему"
 }
