--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Something went wrong": "Something went wrong",
   "reload page": "Reload page",
   "throw error": "Throw error",
-  "toggle": "Toggle theme"
+  "toggle": "Toggle theme",
+  "short language": "En"
 }
