create Modal, change theme decorator, add new themes for Button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "reload page": "Reload page",
   "throw error": "Throw error",
   "toggle": "Toggle theme",
-  "short language": "En"
+  "short language": "En",
+  "sign in": "Sign in"
 }
