--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "reload page": "Перезагрузить страницу",
   "throw error": "Бросить ошибку",
   "toggle": "Перключить тему",
-  "short language": "Ru"
+  "short language": "Ru",
+  "sign in": "Войти"
 }
