lesson 30, add redux-toolkit, made counter, tests for all lyaers of redux

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,7 @@
   "throw error": "Throw error",
   "toggle": "Toggle theme",
   "short language": "En",
-  "sign in": "Sign in"
+  "sign in": "Sign in",
+  "increment": "Increment",
+  "decrement": "Decrement"
 }
