made custom input, made login modal and login form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
   "short language": "En",
   "sign in": "Sign in",
   "increment": "Increment",
-  "decrement": "Decrement"
+  "decrement": "Decrement",
+  "input username": "Username",
+  "input password": "Password"
 }
