make login form, make text ui component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,8 @@
   "increment": "Increment",
   "decrement": "Decrement",
   "input username": "Username",
-  "input password": "Password"
+  "input password": "Password",
+  "auth error": "Wrong username or password",
+  "auth form": "Auth Form",
+  "sign out": "Sign out"
 }
