lesson 37, add progile page, profile entity, use memo for components

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,6 @@
   "input password": "Password",
   "auth error": "Wrong username or password",
   "auth form": "Auth Form",
-  "sign out": "Sign out"
+  "sign out": "Sign out",
+  "profile page": "Profile page"
 }
