fix ts strict errors, fix tests, made profile page

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,4 +1,6 @@
 {
-    "profile page": "Profile page"
+  "profile page": "Profile page",
+  "Edit": "Edit",
+  "Firstname": "Firstname",
+  "Lastname": "Lastname"
 }
-  
