--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,4 +1,6 @@
 {
-    "profile page": "Профиль"
+  "profile page": "Профиль",
+  "Edit": "Редактировать",
+  "Firstname": "Имя",
+  "Lastname": "Фамилия"
 }
-  
