--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,5 +14,8 @@
   "input username": "Введите логин",
   "auth error": "Неверный логин или пароль",
   "auth form": "Форма Авторизации",
-  "sign out": "Выйти"
+  "sign out": "Выйти",
+  "Edit": "Редактировать",
+  "Cancel": "Отменить",
+  "Save": "Сохранить"
 }
