--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -9,5 +9,11 @@
   "Username": "Имя пользователя",
   "Avatar": "Сылка на аватар",
   "Avatar not found": "Аватар не найден",
-  "Currency": "Укажите валюту"
+  "Currency": "Укажите валюту",
+  "Incorrect age": "Ввведен неккоректный возраст!",
+  "Incorrect country": "Введена неверная страна!",
+  "Name and surname": "Необходимо ввести Имя и Фамилию",
+  "Server error": "Серверная ошибка при сохранении краточки профиля",
+  "Data is missed": "Данные не указаны",
+  "Country": "Укажиет страну"
 }
