finished comments section

--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -3,5 +3,6 @@
   "ARTICLE PAGE": "Articles Page",
   "articles": "Articles",
   "Article not found": "Article not found",
-  "Error occured while loading": "Error occured while loading article"
+  "Error occured while loading": "Error occured while loading article",
+  "Comments": "Comments"
 }
