--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -2,5 +2,6 @@
   "ARTICLE DETAILS": "Подробности статьи",
   "ARTICLE PAGE": "Страница статей",
   "articles": "Статьи",
-  "Article not found": "Статья не найдена"
+  "Article not found": "Статья не найдена",
+  "Comments": "Комментарии"
 }
