make articles list, artilce list item, card component

--- a/public/locales/en/articles.json
+++ b/public/locales/en/articles.json
@@ -4,5 +4,6 @@
   "articles": "Articles",
   "Article not found": "Article not found",
   "Error occured while loading": "Error occured while loading article",
-  "Comments": "Comments"
+  "Comments": "Comments",
+  "Go back to list": "Go back to the list"
 }
