--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -3,5 +3,6 @@
   "ARTICLE PAGE": "Страница статей",
   "articles": "Статьи",
   "Article not found": "Статья не найдена",
-  "Comments": "Комментарии"
+  "Comments": "Комментарии",
+  "Go back to list": "Назад к списку"
 }
