--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,5 +20,6 @@
   "Error occured while loading": "Произошла ошибка при загрузке статьи",
   "No comments": "Комментарии отсутствуют",
   "Send": "Отправить",
-  "Enter your comment": "Введите ваш комментарий"
+  "Enter your comment": "Введите ваш комментарий",
+  "Continue reading": "Читать далее..."
 }
