--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,6 @@
   "Save": "Save",
   "No comments": "No comments",
   "Send": "Send",
-  "Enter your comment": "Enter your comment"
+  "Enter your comment": "Enter your comment",
+  "Continue reading": "Continue reading..."
 }
