61 lesson, add article,edit article

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,6 @@
   "No comments": "Комментарии отсутствуют",
   "Send": "Отправить",
   "Enter your comment": "Введите ваш комментарий",
-  "Continue reading": "Читать далее..."
+  "Continue reading": "Читать далее...",
+  "Nikolai User": "Николай"
 }
