--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,5 +21,6 @@
   "No comments": "No comments",
   "Send": "Send",
   "Enter your comment": "Enter your comment",
-  "Continue reading": "Continue reading..."
+  "Continue reading": "Continue reading...",
+  "Nikolai User": "Nikolai"
 }
