refactor translation plugins, translation

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,5 +22,6 @@
   "Send": "Отправить",
   "Enter your comment": "Введите ваш комментарий",
   "Continue reading": "Читать далее...",
-  "Nikolai User": "Николай"
+  "Nikolai User": "Николай",
+  "Create Article": "Создать статью"
 }
