--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,5 +22,6 @@
   "Send": "Send",
   "Enter your comment": "Enter your comment",
   "Continue reading": "Continue reading...",
-  "Nikolai User": "Nikolai"
+  "Nikolai User": "Nikolai",
+  "Create Article": "Create Article"
 }
