new babel plugin, exclude ts loader, refactoring, migrate to 18 react

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,8 @@
   "Enter your comment": "Enter your comment",
   "Continue reading": "Continue reading...",
   "Nikolai User": "Nikolai",
-  "Create Article": "Create Article"
+  "Create Article": "Create Article",
+  "Admin Page": "Admin Page",
+  "Admin": "Admin Page",
+  "Forbidden Page": "You have no authority for this page"
 }
