add features NotificationButton, AvartarDropdown, add entity Notification, long pulling rtk

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,6 @@
   "Create Article": "Create Article",
   "Admin Page": "Admin Page",
   "Admin": "Admin Page",
-  "Forbidden Page": "You have no authority for this page"
+  "Forbidden Page": "You have no authority for this page",
+  "Logout": "Logout"
 }
