--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,6 @@
   "Create Article": "Создать статью",
   "Admin Page": "Страница администирования",
   "Admin": "Администрация",
-  "Forbidden Page": "У вас нет прав для этой страницы"
+  "Forbidden Page": "У вас нет прав для этой страницы",
+  "Logout": "Выйти"
 }
