--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,5 +27,7 @@
   "Admin Page": "Admin Page",
   "Admin": "Admin Page",
   "Forbidden Page": "You have no authority for this page",
-  "Logout": "Logout"
+  "Logout": "Logout",
+  "Your feedback": "Type your feedback here",
+  "Thanks for your feedback": "Thanks for your feedback!"
 }
