--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,5 +27,8 @@
   "Admin Page": "Страница администирования",
   "Admin": "Администрация",
   "Forbidden Page": "У вас нет прав для этой страницы",
-  "Logout": "Выйти"
+  "Logout": "Выйти",
+  "Thanks for your feedback": "Спасибо за отзыв!",
+  "Your feedback": "Ваш отзыв",
+  "profile page": "Профиль"
 }
